@@ -2,17 +2,18 @@ package com.praktical.HelpDesk.tests.unit;
 
 import com.praktica.HelpDesk.dto.task.TaskRequestDto;
 import com.praktica.HelpDesk.entity.Task;
+import com.praktica.HelpDesk.entity.UserEntity;
 import com.praktica.HelpDesk.repository.TaskRepository;
 import com.praktica.HelpDesk.entity.TaskStatus;
+import com.praktica.HelpDesk.service.UserService;
 import com.praktica.HelpDesk.service.impl.TaskServiceImpl;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
+import org.springframework.data.jpa.domain.Specification;
 
 import java.security.Principal;
 import java.time.LocalDateTime;
@@ -28,6 +29,9 @@ import static org.mockito.Mockito.*;
 public class TaskServiceTest {
 
     @Mock
+    private UserService userService;
+
+    @Mock
     private TaskRepository taskRepository;
 
     @Mock
@@ -37,34 +41,44 @@ public class TaskServiceTest {
     private TaskServiceImpl taskService;
 
     private Task createTestTask() {
-        return Task.builder()
-                .id(1L)
-                .description("Test task")
-                .status(TaskStatus.WAIT)
-                .createdAt(LocalDateTime.now())
-                .build();
+        Task task = new Task();
+        task.setId(1L);
+        task.setDescription("Test task");
+        task.setStatus(TaskStatus.WAIT);
+        task.setCreatedAt(LocalDateTime.now());
+
+        UserEntity user = new UserEntity();
+        user.setId(1L);
+        user.setEmail("test@example.com");
+        task.setToUser(user);
+
+        return task;
     }
 
     @Test
     void getAll_ShouldReturnTasksList() {
-
+        // Arrange
         Task task = createTestTask();
         when(taskRepository.findAll()).thenReturn(Collections.singletonList(task));
 
+        // Act
         List<Task> result = taskService.getAll();
 
+        // Assert
         assertEquals(1, result.size());
         assertEquals("Test task", result.get(0).getDescription());
     }
 
     @Test
     void getById_ShouldReturnTask() {
-
+        // Arrange
         Task task = createTestTask();
         when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
 
+        // Act
         Task result = taskService.getById(1L);
 
+        // Assert
         assertNotNull(result);
         assertEquals(1L, result.getId());
     }
@@ -73,16 +87,22 @@ public class TaskServiceTest {
     void create_ShouldSaveNewTask() {
         // Arrange
         TaskRequestDto requestDto = new TaskRequestDto();
-        requestDto.setDescription("New task");  // Указываем только описание
+        requestDto.setDescription("New task");
 
-        Task savedTask = Task.builder()
-                .id(1L)
-                .description("New task")
-                .status(TaskStatus.WAIT)  // Используем WAIT вместо OPEN
-                .build();
+        UserEntity user = new UserEntity();
+        user.setId(1L);
+        user.setEmail("test@example.com");
+
+        when(userService.getByEmail(anyString())).thenReturn(user);
+        when(principal.getName()).thenReturn("test@example.com");
+
+        Task savedTask = new Task();
+        savedTask.setId(1L);
+        savedTask.setDescription("New task");
+        savedTask.setStatus(TaskStatus.WAIT);
+        savedTask.setToUser(user);
 
         when(taskRepository.save(any(Task.class))).thenReturn(savedTask);
-        when(principal.getName()).thenReturn("test@example.com");
 
         // Act
         Task result = taskService.create(requestDto, principal);
@@ -90,59 +110,90 @@ public class TaskServiceTest {
         // Assert
         assertNotNull(result);
         assertEquals("New task", result.getDescription());
-        verify(taskRepository, times(1)).save(any(Task.class));
+        verify(taskRepository).save(any(Task.class));
+        verify(userService).getByEmail("test@example.com");
     }
 
     @Test
     void deleteById_ShouldCallRepository() {
+        // Arrange
+        Task task = createTestTask();
+        when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
+        doNothing().when(taskRepository).delete(any(Task.class));
 
-        doNothing().when(taskRepository).deleteById(1L);
-
+        // Act
         taskService.deleteById(1L);
 
-        verify(taskRepository, times(1)).deleteById(1L);
+        // Assert
+        verify(taskRepository).delete(any(Task.class));
     }
 
     @Test
     void takeTask_ShouldUpdateTaskStatus() {
-
+        // Arrange
         Task task = createTestTask();
-        when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
-        when(taskRepository.save(any(Task.class))).thenReturn(task);
-        when(principal.getName()).thenReturn("test@example.com");
+        task.setToUser(null); // Явно убираем назначенного пользователя
 
+        UserEntity user = new UserEntity();
+        user.setId(1L);
+        user.setEmail("test@example.com");
+
+        when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
+        when(taskRepository.save(any(Task.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(principal.getName()).thenReturn("test@example.com");
+        when(userService.getByEmail(anyString())).thenReturn(user);
+
+        // Act
         Task result = taskService.takeTask(1L, principal);
 
+        // Assert
         assertNotNull(result);
         assertEquals(TaskStatus.IN_PROGRESS, result.getStatus());
+        assertEquals(user, result.getToUser());
+        verify(taskRepository).save(task);
+        verify(userService).getByEmail("test@example.com");
     }
 
     @Test
     void finishTask_ShouldUpdateTaskStatus() {
-
+        // Arrange
         Task task = createTestTask();
         task.setStatus(TaskStatus.IN_PROGRESS);
+
+        UserEntity user = new UserEntity();
+        user.setId(1L);
+        user.setEmail("test@example.com");
+
         when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
         when(taskRepository.save(any(Task.class))).thenReturn(task);
         when(principal.getName()).thenReturn("test@example.com");
+        when(userService.getByEmail(anyString())).thenReturn(user);
 
+        // Act
         Task result = taskService.finishTask(1L, principal);
 
+        // Assert
         assertNotNull(result);
         assertEquals(TaskStatus.FINISHED, result.getStatus());
         assertNotNull(result.getFinishedAt());
+        verify(taskRepository).save(any(Task.class));
+        verify(userService).getByEmail("test@example.com");
     }
 
     @Test
     void getAllWithFilter_ShouldReturnPage() {
-
+        // Arrange
         Task task = createTestTask();
-        Page<Task> page = new PageImpl<>(Collections.singletonList(task));
-        when(taskRepository.findAll(any(Pageable.class))).thenReturn(page);
+        Page<Task> page = new PageImpl<>(List.of(task));
 
+        when(taskRepository.findAll(any(Specification.class), any(Pageable.class)))
+                .thenReturn(page);
+
+        // Act
         List<Task> result = taskService.getAll(null, Pageable.unpaged());
 
+        // Assert
         assertEquals(1, result.size());
-        assertEquals("Test task", result.get(0).getDescription());
+        verify(taskRepository).findAll(any(Specification.class), any(Pageable.class));
     }
 }
